Fix more CSS spacing issues

--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -15,12 +15,10 @@ body {
         grid-template-rows: 140px;
         column-gap: 2rem;
         row-gap: 2rem;
-        width: 100%;
-        height: 100%;
 
         #messages {
             grid-column: 1;
-            grid-row: 1 / 4;
+            grid-row: 1 / 3;
         }
 
         #cores {
@@ -30,7 +28,7 @@ body {
 
         #research {
             grid-column: 3;
-            grid-row: 1 / 4;
+            grid-row: 1 / 3;
         }
 
         #disks {
